Solve page shaking issue using -overflow- property .

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
 
+/* to prevent the page shaking issue */
+html {
+  overflow-y: scroll;
+}
 body {
   margin: 0;
   font-family: 'Space Mono', monospace;
